# mre-container-tar-test

./: .gitignore  MODULE.bazel  README.md
my_package/: BUILD.bazel  empty-file-repo-tags.txt  empty-file-test.yaml
